tests/NormalTests/paczka1/small_fuzzy/85979645.err
Error in line 3: ae3u6xI A448 93,4
Error in line 2: nH639oiCClM A131 87,0
